--- a/Article.Client/Pages/Articles/Articles.razor
+++ b/Article.Client/Pages/Articles/Articles.razor
@@ -1,4 +1,7 @@
 ﻿@layout MainLayout
+@page "/"
+
+<h1>test</h1>
 <DxGrid Data="Data"
         KeyFieldName="EmployeeId"
         EditModelSaving="OnEditModelSaving"
